--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
                     <li><a href="products.html">PRODUCTS</a></li>
                     <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="cart.html">CART</a></li>
-                    <li><a href="Contact.html">CONTACT</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </nav>
         </header>
